--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^15.1.7",
     "@notionhq/client": "^2.2.14",
     "@types/react-google-recaptcha": "^2.1.9",
     "aos": "^3.0.0-beta.6",
